Fix responsiveness bug on mobile in contact.html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,10 @@
   border: 0;
 }
 
-body {
+html, body {
   background-color: black;
   font-family: "Montserrat", sans-serif;
+  height: 100%;
 }
 h2,
 p {
@@ -188,11 +189,14 @@ nav ul li:hover::after {
 /* Style the form container */
 .contact-us {
   background-color: #1a1a1a;
-  height: 100%;
   padding: 50px 0;
   background-image: url("../images/contact-background.webp");
   background-size: cover;
-}
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  }
 .contact-form {
   background-color: rgba(0, 0, 0, 0.6);
 }
